Fixed defect id 626: Made gap between text-box and text 16px as per subscriber section specification

--- a/node-app/src/views/core/components/content/container/style.scss
+++ b/node-app/src/views/core/components/content/container/style.scss
@@ -616,6 +616,12 @@ ul {
     padding: 32px 16px;
     min-width: 158px;
     /*margin: 40px 0;*/
+
+    div[class^="col-"] {
+        padding: 0 px;
+    }
+
+
     .cta-content-icon-wrapper {
         padding-right: 16px;
         .icon-style {
